alternating pattern when the map gets faster. WIP